sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/Treatment_Block__c.object-meta.xml
<CustomObject>
    <label>Treatment Block</label>
    <nameField>
        <displayFormat>TB-{0000}</displayFormat>
        <label>Treatment Blocks</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment Blocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>