sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <label>Block #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>