sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/fields/Block_size__c.field-meta.xml
<CustomField>
    <fullName>Block_size__c</fullName>
    <label>Block size (Hectares)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>