sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/fields/Control_Block__c.field-meta.xml
<CustomField>
    <fullName>Control_Block__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Control Block</label>
    <referenceTo>Treatment_Block__c</referenceTo>
    <relationshipLabel>Treatment Blocks</relationshipLabel>
    <relationshipName>Treatment_Blocks</relationshipName>
    <type>Lookup</type>
</CustomField>