sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/fields/Crop_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Crop_Quantity__c</fullName>
    <formula>Crops_trialing_on__c &amp;&quot;   -    &quot;&amp; TEXT(Total_Yield__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crop-Quantity</label>
    <type>Text</type>
</CustomField>