sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/fields/Crops_trialing_on__c.field-meta.xml
<CustomField>
    <fullName>Crops_trialing_on__c</fullName>
    <label>Crops trialing on</label>
    <length>20</length>
    <type>Text</type>
</CustomField>