sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/fields/Evergrow_Rate__c.field-meta.xml
<CustomField>
    <fullName>Evergrow_Rate__c</fullName>
    <inlineHelpText>Please insert Evergrow Application Rate in KG&#39;s per hectare.</inlineHelpText>
    <label>Evergrow Rate (kgs/hectare)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>