sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/fields/Total_Yield__c.field-meta.xml
<CustomField>
    <fullName>Total_Yield__c</fullName>
    <label>Total Yield (KGs)</label>
    <summarizedField>Trial_Harvest__c.Yield__c</summarizedField>
    <summaryForeignKey>Trial_Harvest__c.Treatment_Block__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>