sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/fields/Trial__c.field-meta.xml
<CustomField>
    <fullName>Trial__c</fullName>
    <label>Trial</label>
    <referenceTo>Trial__c</referenceTo>
    <relationshipLabel>Treatment Blocks</relationshipLabel>
    <relationshipName>Treatment_Blocks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>