sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Treatment Block</fullName>
                <default>true</default>
                <label>Treatment Block</label>
            </value>
            <value>
                <fullName>Control Block</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>