sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <label>Variety</label>
    <length>255</length>
    <type>Text</type>
</CustomField>