sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/fields/Volume_kgs__c.field-meta.xml
<CustomField>
    <fullName>Volume_kgs__c</fullName>
    <label>Volume (kgs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>