sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/fields/Yield_increase__c.field-meta.xml
<CustomField>
    <fullName>Yield_increase__c</fullName>
    <formula>Total_Yield__c  - Control_Block__r.Total_Yield__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yield increase (KGs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>