sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/fields/Yield_increase_percentage__c.field-meta.xml
<CustomField>
    <fullName>Yield_increase_percentage__c</fullName>
    <formula>Yield_increase__c /  Control_Block__r.Total_Yield__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yield % increase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>