sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/recordTypes/Control_Block.recordType-meta.xml
<RecordType>
    <fullName>Control_Block</fullName>
    <active>true</active>
    <label>Control Block</label>
</RecordType>