sfSandBoxCode/force-app/main/default/objects/Treatment_Block__c/recordTypes/Treatment_Block.recordType-meta.xml
<RecordType>
    <fullName>Treatment_Block</fullName>
    <active>true</active>
    <label>Treatment Block</label>
</RecordType>